<resources>
    <string name="app_name">Pizzeria</string>
    <string name="login_button_text">Login</string>
    <string name="Signup_button_text">SignUp</string>


    <string name="Checkout">CHECKOUT</string>
    <string name="Checkout_name">Name:</string>
    <string name="user_name">Enter Card Holder Name</string>
    <string name="Checkout_email">Email:</string>
    <string name="user_email">Enter Your Email</string>
    <string name="Checkout_phone">Phone:</string>
    <string name="user_phone">Enter Your Phone</string>
    <string name="Checkout_address">Address:</string>
    <string name="user_address">Enter Your Address</string>
    <string name="user_card_number">Enter Card Number</string>
    <string name="user_card_expiry">Expiry Date</string>
    <string name="user_card_cvv">CVV</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="cart">Cart</string>
    <string name="cart_button_text">Cart</string>
    <string name="logout_button_text">Logout</string>
    <string name="menu_button_Text">Menu</string>
    <string name="back_Button_text">Back</string>
    <string name="Order_placed">Order Placed Successfully.</string>

</resources>