<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Checkout"
            android:textColor="@color/prime"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/usernametxt"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/Checkout_name"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:autofillHints="username" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/emailtxt"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/Checkout_email"
                android:textColor="@color/black"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/text_background"
                android:ems="10"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:autofillHints="emailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/phonetxt"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/Checkout_phone"
                android:textColor="@color/black"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:background="@drawable/text_background"
                android:ems="10"
                android:hint="@string/user_phone"
                android:inputType="phone"
                android:paddingStart="20sp"
                android:paddingEnd="0sp"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:autofillHints="phone" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/addresstxt"
                android:layout_width="90dp"
                android:layout_height="27dp"
                android:text="@string/Checkout_address"
                android:textColor="@color/black"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/text_background"
                android:ems="10"
                android:hint="@string/user_address"
                android:inputType="textPersonName"
                android:paddingStart="20sp"
                android:paddingEnd="0dp"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:autofillHints="postalAddress" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <EditText
                android:id="@+id/cardnumber"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/user_card_number"
                android:inputType="number"
                android:textSize="20sp"
                android:autofillHints="creditCardNumber" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center">

            <EditText
                android:id="@+id/expirydate"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/user_card_expiry"
                android:inputType="date"
                android:textSize="20sp"
                android:autofillHints="creditCardExpirationDate" />

            <EditText
                android:id="@+id/cvv"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/user_card_cvv"
                android:inputType="number"
                android:textSize="20sp"
                android:autofillHints="cvv" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/confirm_button_text"
                android:textColorHint="@color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/cancel_button_text"
                android:layout_marginStart="40dp"
                android:textColorHint="@color/white"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>