<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Order_placed"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/back_Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_Text"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/logout_Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/logout_button_text"
        android:layout_marginBottom="16dp" />

    </LinearLayout>

</LinearLayout>
